[package]
name = "glasscast"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
raylib = { version = "3.5", git = "https://github.com/deltaphc/raylib-rs", features = [
    "with_serde"
] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
clap = "2.33.3"
failure = "0.1.8"
geo = "0.18.0"